@@ -59,12 +59,12 @@ plot_pls(cube, pls.colorBy="C_Temp")
 \seealso{
 \code{\link{plot_pls}}
 
-Other Plot arguments: \code{\link{plot,aquap_data,missing-method}},
-  \code{\link{plot_aqg_args}}, \code{\link{plot_pca_args}},
-  \code{\link{plot_pg_args}}, \code{\link{plot_sim_args}}
-
 Other PLSR documentation: \code{\link{calc_pls_args}},
   \code{\link{plot_pls,aquap_cube-method}},
   \code{\link{plot_pls_indepPred}}
+
+Other Plot arguments: \code{\link{plot,aquap_data,missing-method}},
+  \code{\link{plot_aqg_args}}, \code{\link{plot_pca_args}},
+  \code{\link{plot_pg_args}}, \code{\link{plot_sim_args}}
 }
 
