@@ -108,15 +108,15 @@ predList <- plot_pls_indepPred(fdIndep, cu, toxls=FALSE) # no exporting to xls
 }
 }
 \seealso{
+Other PLSR documentation: \code{\link{calc_pls_args}},
+  \code{\link{plot_pls,aquap_cube-method}},
+  \code{\link{plot_pls_args}}
+
 Other Plot functions: \code{\link{plot,aquap_cube,missing-method}},
   \code{\link{plot,aquap_data,missing-method}},
   \code{\link{plot_aqg}},
   \code{\link{plot_pca,aquap_cube-method}},
   \code{\link{plot_pls,aquap_cube-method}},
   \code{\link{plot_simca,aquap_cube-method}}
-
-Other PLSR documentation: \code{\link{calc_pls_args}},
-  \code{\link{plot_pls,aquap_cube-method}},
-  \code{\link{plot_pls_args}}
 }
 
